fix gap

--- a/src/assets/styles/cmps/SideNav.scss
+++ b/src/assets/styles/cmps/SideNav.scss
@@ -171,7 +171,6 @@
             display: grid;
             grid-template-rows: repeat(auto-fill, minmax(30px, 1fr));
             align-items: center;
-            gap: 3px;
             margin-left: 0.8em;
         }
     }
